--- a/app/views/pages/pirates.html.erb
+++ b/app/views/pages/pirates.html.erb
@@ -21,21 +21,91 @@
 
 <br>
 <div class="row">
-  <h2>YOUR HOST</h2>
   <div class="col-md-1">
   </div>
-  <div class="col-md-5 left">
-    <%= image_tag "jeff.jpg", class: 'width-300' %>
+  <div class="col-md-5">
+    <%= image_tag "jeff.jpg", class: 'width-300', id: 'jeff' %>
+    <div class="pink-square-under-pic"></div>
   </div>
   <div class="col-md-5 right">
+    <h2 class="block-font">YOUR HOST</h2>
     <p>Hello. I am Jeffery. Such a simple phrase of basic introduction, that we give people all the time; yet the depth of this statement (if ever given the opportunity to reveal), is phenomenal! I think we often hide behind a name, or the common "Hi, how are you" and don't give enough time and effort to the person we are talking to. When do we get real?</p>
 
     <p>I'm hoping that through Thrive100, we can quit playing "house" and that you will be inspired to tell your story, and allow others to share theirs. It is truly a remarkable thing when you can live as you were created, because there is genuine influence when you are real and transparent. If you can fearlessly share your testimony, trials and victories and simply be who you are today, you can now move others to do the same. We have to choose to stop living as pretentious brainwashed robots, and start living as human beings. It is then, that humanity is revealed and we can begin to understand one another, embrace imperfections and plant seeds of hope. Imagine if we looked past pigmentation and saw God's creation, taking the time to ask, to listen and understand. It's 2017 and I'm done doing things the way they've "always been done." It's time to disregard personal agendas and let love grow.</p>
   </div>
 </div>
+<div class="row" id="second-row-pirates">
+  <div class="col-md-5" id="right-side-pirates">
+    <p>So I'll go first! I was born and raised in Spokane, Washington 1988 and boy was I a chunk. I had blonde hair and dark blue eyes until the age of about two and no, we didn't have a milkman. I was a unique little kid. I was quiet and shy, not in a bratty or rude way though, but very polite, respectful and darn cute. I was a diehard Disney fan and completely obsessed with bugs, sea creatures, animals, aliens and many other corky things that most kids aren't. My athletic ability was questionable at best and consisted primarily of rollerblading in our cruddy alleyway on Buckey and by no means was I confident in my craft. I wore a helmet, wrist guards, knee pads, the works all to avoid the site of blood or I instinctively would cry and fight the inward nature to faint. I also took a tumbling class at the YMCA in 2nd grade, because my crush Kaitlyn Green was a gymnast there. "Hey Kaitlyn, I'm single *wink." All of that was a bust, as my Olympic future in tumbling never developed past a somersault. One thing that I was always incredibly good at though was using my imagination. I could take my cousins, friends and neighbors on any daring adventure...a real Peter Pan, minus the flying bit...I'm afraid of heights. What I didn't realize then, is that what I had was an incredible gift. It was that gift of vivid imagination that would allow me to heal at the age of six.</p>
+  </div>
+  <div class="col-md-5">
+    <%= image_tag "backpack.jpg", class: 'width-200' %>
+    <div id="pink-square"></div>
+    <div class="pink-square-under-pic"></div>
+  </div>
+</div>
+<br>
+<h4 class="block-font" id="real"><strong>Disclaimer: It's about to get real.</strong></h4>
+<br>
+<div class="row">
+  <div class="col-md-5 col-md-offset-1">
+    <p>At the age of six my world was wrecked when I was sexually abused. I can vividly remember feeling so much shame and guilt for something I now realize was not my fault. For 13 years I told no one and this already shy kid, became even more of an introvert and trusted next to no one! I truly believe that nothing in life, good or bad is wasted though. Understand, I don't wish this on anyone and I urge any parent out there to get involved in your child's life. Use discernment, judgement, intuition, common sense whatever you want to call it; ask the tough questions and be ready for an honest answer. Love your child unconditionally! OK, rant over. As hard as that phrase "I was abused" is to say, it is pivotal in shaping who I became.</p>
+  </div>
+  <div class="col-md-5">
+    <p>All things work out for good. It was in post events, that I began to discover, craft and grow in my gifting. I would sing and draw all the time. I didn't draw in blobs and riddles like most kids my age, but detailed three dimensional skylines, homes and portraits. What I saw in my head, I could put on paper! This proved true in my writing abilities as well. I began to write plays and skits and perform them in front of massive audiences. Audiences composed of a ridiculous amount of stuffed animals and toys, who by the way are a tough crowd. I also looked forward to Halloween every year, because I got to help my mom make our very creative and legit costumes. These artistic gifts were my escape as I was filled with so much joy and peace when I was anywhere but "real-life". I continued on this introverted creative cycle for a few years.</p>
+  </div>
+</div>
 
+<div class="photo-row">
+  <%= image_tag "enough.jpg", class: 'width-200' %>
+  <%= image_tag "electric-heart.jpg", class: 'width-200' %>
+</div>
 
+<div class="row">
+  <div class="col-md-5 col-md-offset-1">
+    <br>
+    <p>I became a bit more social when my little sister was born. I took my partner in crime everywhere with me. We would roller blade, ride bikes, adventure into the forest behind our house, put on plays for live audience members at family gatherings (how embarrassing) and really just begin to embrace life. It was also around this time that I attended many of my of cousin's dance recitals. I remember watching them in awe and wanting to be up on that stage SO BAD. I wanted to be like that one brave boy on stage in a sea of girls, unabashedly doing what he loved. I never did though because "boys don't dance". The worst part about this statement (other than it being ignorant and completely false) is that no one EVER actually said that to me. Rather it was some subconscious rule I told myself based on what all the other kids around me did. I played the pretentious brainwashed robot I mentioned earlier and began to lose my identity, purpose and passion as I entered Jr. High. I tried to please the masses by doing what I thought they wanted me to do and be who they wanted me to be. I played basketball for my uncle's AA team and I was awful. I also tried X-Country, track and field and Tea Kwon Do...also awful.</p>
+  </div>
+  <div class="col-md-5">
+    <div class="pink-square-under-pic2"></div>
+    <p>The mindset of being anyone but myself, carried into high school. I began to throw my life away at the expense of being accepted and "cool". Getting an invitation to certain birthday parties or sitting at certain tables in the cafeteria were all that mattered. I wore the clothes, spoke the lingo and I remember receiving the biggest honor (in my mind) of Senior Homecoming King. In that moment while all my strides of attaining popularity and friends had become a reality, inside I still felt like the corky kid yelling "hey guys, wait for me". As we all know that honorable weekend ended and real life went on. My plans of being an architect in Vegas vanished after I let my grades slip and graduation was in jeopardy. I was broken. Senior year was coming to an end and my friends and everyone I lived to please was moving on with their lives. It was in that broken down moment in our school counselors office, that I realized everything I had become was nothing close to who I truly wanted to be. The idea that "nice guys finish last" was absolutely accurate in my case. I find it crazy to see how often we throw away our dreams, visions, goals or how we dress and speak all for the purpose and false pretenses of being "accepted." Well at the end of my senior year, that is exactly what I became! Accepted.</p>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-1">
+  </div>
+  <div class="col-md-5">
+    <%= image_tag "jeff-chair.jpg", class: 'width-300' %>
+    <div class="pink-square-under-pic"></div>
+  </div>
+  <div class="col-md-5 right">
+    <h3 class="block-font">PLOT TWIST</h3>
+    <p>My parents who were always incredible, loving and supportive my entire life, had been battling their own demons. Addictions, tempers, talks of divorce...you know all the crap the world throws at you. Well my parents overnight had an encounter with God. They began to go to church (for real this time), cleaned up the tolerance in our home, fell in love again and I'm not kidding literally overnight were free from all addictions. Drugs, alcohol, "going out" you name it...gone! Not with the assistance of any cold turkey, lukewarm turkey or 12 step program either. While they were having a hallelujah moment, I was resisting the entire idea of having to go to church, pray or embrace any new lifestyle.</p>
 
-<div class="footer">
-  <p class="grey-text">pirates&preacher   <a href="https://www.instagram.com/piratesandpreacher/" class="fa fa-instagram fa-lg" target="_blank"></a></p>
+    <p>Now, it wasn't the idea of God that I was afraid of, as I often prayed as best I knew how through my adolescence and was saved at a summer camp my sophomore year. Rather it was my ingrained image of what I thought church looked like or who I had to be if I climbed aboard the "Holy Train". You know... The "hell fire and brimstone all while hugging in the oversized khaki's, comb overs, sweater vests and calling you "brother"... that guy. Well I lost that battle! Living under my</p>
+  </div>
+  <div class="overflow-text">
+    <p>parents roof at 17 left me no choice...I had to go to church and boy were my preconceived ideas wrong. Very quickly even through my jerk exterior and mockery, these people became friends, family, mentors and yes "brothers". I realized in a short amount of time that I wasn't afraid of them, I was afraid of them seeing past my presentation and finding out who I was. The inwardly awkward, confused, wannabe, bug catching nerd who truly lost his way and didn't know who he was anymore or what he wanted. None of that mattered though! Even in the midst of what I would today consider my darkest moments and farthest fall, they were there. They along with my family loved, encouraged, supported, inspired and truly played a HUGE part in who I am today. My life has never be the same.</p>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-1">
+  </div>
+  <div class="col-md-5 right">
+    <br><br>
+    <%= image_tag "stage.jpg", class: 'width-500' %>
+    <br>
+    <div id="pink-square2"></div>
+  </div>
+  <div class="col-md-5">
+    <p>I'll Fast Forward! It's been about 10+ years now since that whirlwind of senior year and trust me, although life still throws it's curve balls...my journey has been absolutely amazing. I have worked in ministry the entire time all while pursuing the gifts and dreams God has given me. I am slowly becoming the man, that little boy I once was dreamed to be. I currently do event and service coordination for an incredible church as well as for large cooperation's in Seattle,Washington. I have partnered with the most phenomenal Theatre Company and I am acting, dancing and singing my butt off. I have made the best of friends of all sorts and I couldn't ask for anything more. I love bugs, sea creatures, animals and am even more of a diehard Disney fan than I was as a kid. My family is closer than we have ever been and the dreams for our future are even bigger and brighter. So here we are now as I write my story and you read it. For what purpose and reason?  There is no relative advice here or any profound wisdom for you to meditate on. So whats it worth?</p>
+  </div>
+</div>
+<div class="bottom-pirates">
+  <p>To tell your story is worth everything! It eliminates the shame, fear, guilt, condemnation and doubt you may have about who you were, who you are and who you truly wish to be! To tell your story reminds you of how far you've come and how much you have overcome. It stifles the voices that speak against or discourage you as you get to boldly give them a thumbs up (it's the nicer finger choice anyway) and move forward with the next chapter of your life. I pray that if you get nothing else from this, that you simply understand EVERYTHING about you is beautiful and on purpose. There is nothing you've done that cannot be redeemed and your dreams for your tomorrows are still on the horizon. Please understand, that <span class="block-font">YOU ARE ENOUGH!</span></p>
+</div>
+<hr id=pink-divider>
+<div class="closeout-pirates">
+  <p>Reach out, love someone, help someone, encourage, invest, forgive, write, laugh, dance, sing, dream, share your story, listen to one another, understand one another and be who you were created to be and thrive! Love yourself, love each other, plant the seed and...</p>
+  <p class="grow-love">LET LOVE GROW</p>
 </div>
