--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,7 +5,6 @@
 
 body {
   font-family: 'Quicksand', sans-serif;
-  margin-bottom: 50px;
 }
 
 .title {
@@ -16,8 +15,36 @@ p {
   font-size: 18px;
 }
 
+.small-header {
+  margin-top: 10px;
+  font-family: 'Fjalla One', sans-serif;
+}
+
+.little-grey-block {
+  height: 7px;
+  width: 15px;
+  background-color: black;
+  margin-left: 42%;
+  margin-bottom: 10px;
+}
+
+footer a{
+  color: black;
+}
+
+.navbar a:hover {
+  color: grey;
+}
+
 .bold {
   font-weight: bold;
+}
+
+.page-footer {
+  margin-top: 50px;
+  text-align: center;
+  height: 215px;
+  background-color: #d6d1d5;
 }
 
 .blockquote-footer {
@@ -36,6 +63,7 @@ p {
   color: white;
   margin: auto;
   width: 30%;
+  background-color: #decfd4;
 }
 
 
@@ -129,8 +157,44 @@ a.navbar-brand {
   height: 50px;
 }
 
+.center-image {
+  text-align: center;
+}
+
 .saint-collabs {
   margin-top: 30px;
+}
+
+.photo-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.photo-row img{
+  margin: 10px;
+}
+
+#second-row-pirates {
+  margin-top: 50px;
+}
+
+#real {
+  text-align: center;
+}
+
+#pink-square {
+  width: 30px;
+  height: 30px;
+  float: right;
+  background-color: #decfd4;
+}
+
+#pink-square2 {
+  width: 30px;
+  margin-top: 20px;
+  height: 30px;
+  background-color: #decfd4;
 }
 
 .nav {
@@ -139,6 +203,10 @@ a.navbar-brand {
 
 blockquote {
   width: 80%;
+}
+
+#right-side-pirates {
+  margin-left: 130px;
 }
 
 .left {
@@ -152,7 +220,30 @@ blockquote {
 
 nav a {
   color: black;
+  font-size: 18px;
+  margin-left: 10px;
+  margin-right: 5px;
 }
+
+#pic-border {
+  border-bottom: 6px solid #decfd4;
+}
+
+.pink-square-under-pic {
+  margin-top: 60px;
+  background-color: #decfd4;
+  height: 20px;
+  width: 300px;
+}
+
+.pink-square-under-pic2 {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  background-color: #decfd4;
+  height: 20px;
+  width: 300px;
+}
+
 
 .test-header {
   margin-top: 30px;
@@ -175,14 +266,16 @@ nav a {
   width: 100%;
 }
 
-.footer {
-  left: 0;
-  bottom: 20px;
-  width: 100%;
-  height: 30px;
+.grow-love {
+  font-family: 'Fjalla One', sans-serif;
+  color: #decfd4;
+  font-size: 50px;
+}
+
+.closeout-pirates {
+  margin-left: 30%;
   text-align: center;
-  margin-top: 20px;
-  background-color: #eee;
+  width: 40%;
 }
 
 .width-500 {
@@ -196,8 +289,24 @@ nav a {
   text-align: center;
 }
 
+#pink-divider {
+  border: 8px solid #decfd4;
+  width: 70%;
+}
+
+.bottom-pirates {
+  margin-right: 100px;
+  margin-left: 100px;
+}
+
+.overflow-text {
+  margin-right: 130px;
+  margin-left: 130px;
+}
+
 .width-200 {
   width: 400px;
+  height: 513px;
 }
 
 p.width-100 {
@@ -228,7 +337,6 @@ p.width-100 {
 }
 
 .block {
-  background-color: #decfd4;
   padding-top: 20px;
   padding-bottom: 30px;
 }
@@ -265,12 +373,17 @@ h2 {
 
 .pp-intro {
   border-top: 4px solid #decfd4;
+  margin-top: 40px;
 }
 
 .pink-color {
   background-color: #decfd4;
   width: 40px;
   height: 30px;
+}
+
+#jeff {
+  margin-top: 50px;
 }
 
 .top {
