--- a/app/views/pages/blog.html.erb
+++ b/app/views/pages/blog.html.erb
@@ -4,3 +4,56 @@
     <p>BLOG</p>
   </div>
 </div>
+<div class="row">
+  <div class="col-md-7 col-md-offset-1">
+    <br>
+    <p><span class="big-first-letter">W</span>elcome to the blog section of our website! Here it is our hope to uplift, connect, share stories, inspire, challenge, and encourage you to fully embrace life, the people around you, and who you are truly meant to be.</p>
+
+    <p>First, allow me to introduce myself – My name is Sarah, and I am one of the contributing writers for WildHeart blog. I discovered a love of writing somewhere between ages nine and eleven, through a neon green journal with dogs all over it. Through the many years since my adoration has only increased, and somehow or another, I ended up here... writing a blog.</p>
+
+    <p>My passions in life include, but are not limited to – dance, theatre, animals, art, music enjoyment, cooking, crafting, sleeping, coffee, tea, and most importantly, Jesus. Besides all that typically average stuff, I love asking meaningful (by my definition) questions that make people engage with one another and get everyone thinking. To me, I count it as one of my gifts; to my friends, it's a curse that I often dispense upon them with little warning. These questions range from the perfectly boring to the absolutely absurd and painfully awkward (my personal favorite).</p>
+
+    <p>Thankfully, most of my friends tolerate my eccentric quirks quite well and indulge my endless curiosity without getting too disgruntled; however, one thing that I am occasionally berated on is the fact that I avoid answering my own questions. So in homage to those few who have endured my "Sarah Questions" (as they have been so dubbed) and to you, my reader, for patiently sifting through my jumble of an intro, I've decided to take a dose of my own medicine, and honestly answer 12 of my standard "get-to-know-you” questions. I hope you enjoy!</p>
+
+    <p><span class="q-black">Q1.</span> If you were a fruit, what fruit would you be and why?</p>
+    <p><span class="a-pink">A1.</span> Pomegranate. They are awkward yet intriguing, what with their fuchsia color and peculiar shape, they seem to be daring you to try them. Hard to get into, and rather messy on the inside, the fruit is the seeds, and there are literally hundreds of pieces to them.</p>
+    <p><span class="q-black">Q1.</span> Three words you would like a stranger to use to describe you after knowing you for a week?</p>
+    <p><span class="a-pink">A2.</span> Insightful, compassionate, and exciting/fun.</p>
+    <p><span class="q-black">Q3.</span> Three words you think a stranger would actually use to describe you after knowing you for a week?</p>
+    <p><span class="a-pink">A3.</span> Aloof, dull, and, depending on the circumstances, basic or sweet.</p>
+    <p><span class="q-black">Q4.</span> One character trait you wish you had? A4. Man, I don't even know.... everything! Probably something like more discipline or motivation...</p>
+    <p><span class="a-pink">A4.</span> Insightful, compassionate, and exciting/fun.</p>
+    <p><span class="q-black">Q5.</span> Optimist or pessimist?</p>
+    <p><span class="a-pink">A5.</span> Realist/closet optimist – There is no half-empty or half-full; there is just half. The real question is, how are you going to use that half? Because it could change the world.</p>
+    <p><span class="q-black">Q6.</span> Are you a potato?</p>
+    <p><span class="a-pink">A6.</span> Obviously and completely.</p>
+    <p><span class="q-black">Q7.</span> If you were offered 10 million dollars with the stipulation that you had to break ties with everyone you know now – including family – for 10 years, would you take it?</p>
+    <p><span class="a-pink">A7.</span> Errr... there was a time I definitely would have said yes, because of all the ways I could help people with money. But as I've gotten older, I appreciate more and more the importance of time. Sure it'd be lovely to have a brand new Kia Rio gifted to me by some long lost friend or relation, but is that really going to shape my character? Maybe, but not as much as the one-on-one time that my family and friends have invested in me. So while I could potentially make everyone's (including my own) life easier by millions, it wouldn't necessarily make life better. I'd probably try to haggle with the millionaire or whoever was offering it: cut the amount to five million and let me keep five people, mmk?</p>
+    <p><span class="q-black">Q8.</span> Two things you find repulsive in other people?</p>
+    <p><span class="a-pink">A8.</span> Lack of character and arrogance.</p>
+    <p><span class="q-black">Q9.</span> One thing you dislike about yourself? (Personality-wise)</p>
+    <p><span class="a-pink">A9.</span> I am a professional procrastinator, and it's the worst.</p>
+    <p><span class="q-black">Q10.</span> One thing you like about yourself? (Personality-wise)</p>
+    <p><span class="a-pink">A10.</span> I would say that I have a well-developed sense of humor.</p>
+    <p><span class="q-black">Q11.</span> What is your opinion of water fowl?</p>
+    <p><span class="a-pink">A11.</span> I have a strange affinity for birds. They are just so different and weird, and they’re super funny to watch. Although I haven't been exposed to much water fowl besides ducks or seagulls, (they count, right?) it makes me think of Becky, from Finding Dory. I love Becky; I relate to her on a deep level. So all that to say, I have a favorable opinion of water fowl.</p>
+    <p><span class="q-black">Q12.</span> What are three things you'd like to improve in the next year?</p>
+    <p><span class="a-pink">A12.</span> To be more patient with people, to procrastinate less, and to finish what I start without delay.</p>
+
+    <p id="done">And done. I'm not a huge fan of talking about myself, so this will probably be one of the few posts I write solely about me. If you found this article tolerable, check for updates soon!</p>
+
+  </div>
+  <div class="col-md-3 col-md-offset-1">
+    <%= image_tag "flamingo.jpg", class: 'width-itty' %>
+    <p class="sidebar-header">RECENT POSTS</p>
+    <hr class="sidebar-divider">
+    <br>
+    <p class="sidebar-header">ARCHIVE</p>
+    <hr class="sidebar-divider">
+    <br>
+    <p class="sidebar-header">FOLLOW US</p>
+    <hr class="sidebar-divider">
+    <br>
+  </div>
+
+</div>
