--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,7 @@
             <div class="container-fluid">
               <p class=" small-header">let's chat</p>
               <div class="little-grey-block"></div>
+              <p>wildheartmail@gmail.com</p>
               <br>
             </div>
           </div>
@@ -52,7 +53,7 @@
             <div class="container-fluid">
               <p class="small-header">Social</p>
               <div class="little-grey-block"></div>
-              <p class=""><a href="https://www.facebook.com/1WILDHEART/" target="_blank" class="fa fa-facebook fa-lg"></a>                                                 <a href="https://www.instagram.com/wildheart_ig/?hl=en" class="fa fa-instagram fa-lg" target="_blank"></a></p>
+              <p class=""><a href="https://www.facebook.com/1WILDHEART/" target="_blank" class="fa fa-facebook fa-lg"></a><a href="https://www.instagram.com/wildheart_ig/?hl=en" class="fa fa-instagram fa-lg" target="_blank"></a></p>
               <br>
             </div>
           </div>
