--- a/app/views/pages/st_society.html.erb
+++ b/app/views/pages/st_society.html.erb
@@ -1,6 +1,6 @@
 <div class="two-pics">
   <div class="heading_image">
-    <%= image_tag "girl.jpeg", class: "society-girl" %>
+    <%= image_tag "girl.jpg", class: "society-girl" %>
   </div>
   <div class="centered1">
     <div class="text-background">
@@ -12,7 +12,7 @@
       <p>WILD HEART</p>
     </div>
   </div>
-  <%= image_tag "guy.jpeg", class: "society-guy" %>
+  <%= image_tag "guy.jpg", class: "society-guy" %>
 </div>
 
 <h2 class="title">Collaborators</h2>
